fix(header-css): header에 z-index 설정

--- a/frontend/src/components/Header/index.module.scss
+++ b/frontend/src/components/Header/index.module.scss
@@ -126,6 +126,7 @@
 
 .drawerWrapper {
   position: fixed;
+  z-index: 100;
   left: 0;
   top: 32px;
   height: 100vh;
